--- a/app/src/case.html
+++ b/app/src/case.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 @@include('./part/head.html')
-<title>案例展示</title>
+<title>远程诊室展示</title>
 <!-- build:css css/case.css -->
 <link rel="stylesheet" type="text/css" href="./css/case.css">
 <!-- endbuild -->
