--- a/app/src/doctor.html
+++ b/app/src/doctor.html
@@ -62,10 +62,10 @@
 		  			// }
 		  		],
 		  		newsFlash: [
-		  			{
-		  				url: '',
-		  				img: ''
-		  			}
+		  			// {
+		  			// 	url: '',
+		  			// 	img: ''
+		  			// }
 		  		]
 		  	}
 		  },
