--- a/app/src/medical.html
+++ b/app/src/medical.html
@@ -26,7 +26,7 @@
 		<div class="card medical-case">
 			<div class="card-header">
 				<p></p>
-				<h2>远程病例视频展示</h2>
+				<h2>远程诊室展示</h2>
 				<i></i>
 			</div>
 			<div class="card-content">
