大象医疗修改为大象医生，邮箱地址修改，增加ico

--- a/app/src/about.html
+++ b/app/src/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 @@include('./part/head.html')
-<title>关于大象医疗</title>
+<title>关于大象医生</title>
 <!-- build:css css/about.css -->
 <link rel="stylesheet" type="text/css" href="./css/about.css">
 <!-- endbuild -->
