--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 @@include('./part/head.html')
-<title>大象医疗</title>
+<title>大象医生</title>
 <!-- build:css css/index.css -->
 <link rel="stylesheet" type="text/css" href="./css/index.css">
 <!-- endbuild -->
