--- a/app/src/part/footer.html
+++ b/app/src/part/footer.html
@@ -14,8 +14,7 @@
 
 			<div class="footer-linkus">
 				<h5>联系我们</h5>
-				<!-- <p><label>企业邮箱：</label>drelephant@dr-elefant.com.cn</p> -->
-				<p><label>企业邮箱：</label>drelephant@dr-elefant.com.cn</p>
+				<p><label>企业邮箱：</label>drelephant@dr-elephant.com</p>
 				<p><label>公司地址：</label>上海市静安区灵石路697号健康智谷8号楼304</p>
 			</div>
 
