--- a/app/src/part/head.html
+++ b/app/src/part/head.html
@@ -9,6 +9,8 @@
 	<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
 	<meta name="renderer" content="webkit"> 
 	<!-- 国内双内核处理方案 -->
+	<link rel="shortcut icon" href="./favicon.ico" />
+	<link rel="bookmark" href="./favicon.ico" type="image/x-icon"　/>
 	<link rel="stylesheet" type="text/css" href="./lib/swiper/dist/css/swiper.min.css">
 	<!-- build:css css/common.css -->
 	<link rel="stylesheet" type="text/css" href="./css/common.css">
