--- a/app/src/part/header.html
+++ b/app/src/part/header.html
@@ -63,7 +63,7 @@
 		  			link: 'aboutUs',
 		  			list: [
 		  				{
-		  					name: '关于大象医疗',
+		  					name: '关于大象医生',
 		  					link: 'about'
 		  				},{
 		  					name: '加入我们',
